# quant-infra

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  gazelle_python.yaml  requirements.in  requirements_lock.txt
mpm/: BUILD
src/: BUILD  asset.proto  market.py  market_test.py  service.py  strategy.py  strategy_test.py
src/asset_parsers/: BUILD  asset_parsers_test.py
test/data/: BUILD  README  data_import_test.py
test/mock_server/: account_orders_openapi.yaml  market_data_openapi.yaml
