"""HR Strategy LLC.

This codebase is simply an initialization of a dumb thought, which just magically occured in the middle of the night. If one day you make tons of money from this, I'd highly appreciate if you buy me a coffee :)
"""

##########################
# Generic rules          #
##########################

bazel_dep(name = "rules_oci", version = "2.0.1")

##########################
# Python rules           #
##########################

bazel_dep(name = "aspect_bazel_lib", version = "2.7.8")
bazel_dep(name = "aspect_rules_py", version = "0.7.3")
bazel_dep(name = "rules_python", version = "0.34.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.12",
)
use_repo(python, "python_3_12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//third_party:requirements.txt",
)
use_repo(pip, "pip")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "python",
    image = "docker.io/library/python",
    platforms = [
        "linux/arm64/v8",
        "linux/arm/v7",
        "linux/amd64",
    ],
    tag = "3.14-rc-slim-bullseye",
)
use_repo(
    oci,
    "python",
)
